--- a/ulysses-bot/package.json
+++ b/ulysses-bot/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.61.0",
+    "node-schedule": "^2.1.1"
   }
 }
