--- a/.hintrc
+++ b/.hintrc
@@ -7,11 +7,13 @@
       "default",
       {
         "ignore": [
-          "backdrop-filter"
+          "backdrop-filter",
+          "-webkit-overflow-scrolling"
         ]
       }
     ],
     "disown-opener": "off",
-    "meta-viewport": "off"
+    "meta-viewport": "off",
+    "no-inline-styles": "off"
   }
 }
