--- a/.hintrc
+++ b/.hintrc
@@ -14,6 +14,12 @@
     ],
     "disown-opener": "off",
     "meta-viewport": "off",
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "axe/structure": [
+      "default",
+      {
+        "list": "off"
+      }
+    ]
   }
 }
